--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -22,20 +22,25 @@
         <p>{{ user.name }}</p>
     </div>
     <div class="col-md-10 col-sm-9">
-        {% if user.image %}
-            <img class ="img-blogpost" src="/media/{{ user.profile.image.url }}">
+        {% if user.profile.image %}
+            <img class ="img-blogpost img-circle" src="{{ user.profile.image.url }}">
         {% endif %}
-        <h3>{{ user.name }}</h3>
+        <h3>{{ user.profile.name }}</h3>
         <div class="row">
             <div class="col-xs-9">
-                <p>{{ user.email }}</p>
-                <p>{{ user.about_me }}</p>
-                <p>{{ user.nationality }}</p>
-                <p>{{ user.created_date }}</p>
+                <p><b>Email Adress: </b>{{ user.email }}</p>
+                <p><b>About Me: </b>{{ user.profile.about_me }}</p>
+                <p><b>Nationality: </b>{{ user.profile.nationality }}</p>
+                <p><b>Profile Created: </b>{{ user.profile.created_date|date:"d F, Y"  }}</p>
             </div>
         </div>
     </div>
-    
+    <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %} 
+        {{ u_form | as_bootstrap  }}
+        {{ p_form | as_bootstrap  }}
+        <button type="submit" class="btn btn-primary">Update</button>
+    </form>
 </div>
 <hr>
 
