--- a/posts/templates/blogposts.html
+++ b/posts/templates/blogposts.html
@@ -27,9 +27,9 @@
                     <div class="col-xs-9">
                         <p>{{ post.content|truncatewords:30 }}</p>
                         <p><a href="{% url 'post_detail' post.id %}" class="btn btn-primary">Read more</a></p>
-                        <p><span class="boldtext">Published on:</span> {{ post.published_date|date:"d F, Y" }} </p>
-                        <p><span class="boldtext">Views:</span> {{post.views}}</p>
-                        <p><span class="boldtext">Tag:</span> {{ post.tag }}</p>
+                        <p><b>Published on:</b> {{ post.published_date|date:"d F, Y" }} </p>
+                        <p><b>Views:</b> {{post.views}}</p>
+                        <p><b>Tag:</b> {{ post.tag }}</p>
                     </div>
                 </div>
             </div>
